k8s/judge-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: judge-worker
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: judge-worker
  template:
    metadata:
      labels:
        app: judge-worker
    spec:
      runtimeClassName: gvisor
      serviceAccountName: judge-worker-ksa

      containers:
      - name: worker
        image: asia-east1-docker.pkg.dev/project-6d617c10-fed9-46d4-b8e/oj/judge-worker:latest
        imagePullPolicy: Always

        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "2000m"

        securityContext:
          runAsNonRoot: true
          runAsUser: 65534
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]

        volumeMounts:
        - name: sandbox-tmp
          mountPath: /sandbox-tmp

      volumes:
      - name: sandbox-tmp
        emptyDir:
          medium: Memory
          sizeLimit: 512Mi
